# excavator

./: .editorconfig  .gitignore  Cargo.toml  README.md  ichneos.db  rustfmt.toml
.github/script/: prs.js
.github/workflows/: main.yml  release.yml  test.yml
migrations/2020-12-24-070800_google_my_activity/: down.sql  up.sql
src/: activities.rs  lib.rs  main.rs
src/activities/: facebook.rs  google.rs  instagram.rs  snapchat.rs  uber_eats.rs
src/activities/facebook/: device_location.rs  facebook_last_location.rs  facebook_location_history.rs  primary_location.rs  primary_public_location.rs
src/activities/google/: google_fit_activity.rs  location_history.rs  mod.rs  my_activity.rs  saved_places.rs  semantic_location_history.rs
src/activities/instagram/: instagram_liked_posts.rs
src/activities/snapchat/: snapchat_areas_visited_history.rs
src/activities/uber_eats/: uber_trips.rs
src/db/: mod.rs  models.rs  save.rs  schema.rs
src/google/: location_history.rs  mod.rs  my_activity.rs  semantic_location_history.rs
src/trackpoints/: mod.rs  places.rs
src/trackpoints/facebook/: mod.rs  primary_location.rs
src/trackpoints/google/: location_history.rs  mod.rs  saved_places.rs
