[package]
name = "excavator"
version = "0.1.0"
authors = ["chansuke <chansuke@georepublic.de>"]
description = "Visualize your digital footprint"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }