[package]
name = "excavator"
version = "0.4.0"
authors = ["Mario Basa <mario.basa@georepublic.de>", "Gawen Monnot <gawen@georepublic.de>", "chansuke <chansuke@georepublic.de>"]
description = "Visualize your digital footprint"
edition = "2018"
license = "GPL-3.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
homepage = "https://ichnion.github.io/website/"
readme = "README.md"

[dependencies]
clap = "3.0.0-beta.2"
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
#rusqlite = "0.24.2"
indicatif = {version = "0.15.0", features = ["rayon"]}
csv = "1"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled", "serde_json"]

[[bin]]
path = "src/main.rs"
name = "excavator"
